--- a/arm-unknown-linux-gnueabi/.config
+++ b/arm-unknown-linux-gnueabi/.config
@@ -283,7 +283,7 @@ CT_LINUX_PATCH_ORDER="global"
 # CT_LINUX_V_5_13 is not set
 # CT_LINUX_V_5_12 is not set
 # CT_LINUX_V_5_11 is not set
-# CT_LINUX_V_5_10 is not set
+CT_LINUX_V_5_10=y
 # CT_LINUX_V_5_9 is not set
 # CT_LINUX_V_5_8 is not set
 # CT_LINUX_V_5_7 is not set
@@ -297,7 +297,7 @@ CT_LINUX_PATCH_ORDER="global"
 # CT_LINUX_V_4_18 is not set
 # CT_LINUX_V_4_17 is not set
 # CT_LINUX_V_4_16 is not set
-CT_LINUX_V_4_15=y
+# CT_LINUX_V_4_15 is not set
 # CT_LINUX_V_4_14 is not set
 # CT_LINUX_V_4_13 is not set
 # CT_LINUX_V_4_12 is not set
@@ -313,7 +313,7 @@ CT_LINUX_V_4_15=y
 # CT_LINUX_V_3_4 is not set
 # CT_LINUX_V_3_2 is not set
 # CT_LINUX_V_2_6_32 is not set
-CT_LINUX_VERSION="4.15.18"
+CT_LINUX_VERSION="5.10.185"
 CT_LINUX_MIRRORS="$(CT_Mirrors kernel.org linux ${CT_LINUX_VERSION})"
 CT_LINUX_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_LINUX_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
@@ -323,10 +323,10 @@ CT_LINUX_5_19_or_older=y
 CT_LINUX_older_than_5_19=y
 CT_LINUX_5_12_or_older=y
 CT_LINUX_older_than_5_12=y
-CT_LINUX_5_5_or_older=y
-CT_LINUX_older_than_5_5=y
-CT_LINUX_5_3_or_older=y
-CT_LINUX_older_than_5_3=y
+CT_LINUX_later_than_5_5=y
+CT_LINUX_5_5_or_later=y
+CT_LINUX_later_than_5_3=y
+CT_LINUX_5_3_or_later=y
 CT_LINUX_later_than_4_8=y
 CT_LINUX_4_8_or_later=y
 CT_LINUX_later_than_3_7=y
@@ -338,7 +338,6 @@ CT_KERNEL_LINUX_VERBOSITY_0=y
 # CT_KERNEL_LINUX_VERBOSITY_1 is not set
 # CT_KERNEL_LINUX_VERBOSITY_2 is not set
 CT_KERNEL_LINUX_VERBOSE_LEVEL=0
-CT_KERNEL_LINUX_INSTALL_CHECK=y
 CT_ALL_KERNEL_CHOICES="BARE_METAL LINUX WINDOWS"
 
 #
@@ -525,7 +524,7 @@ CT_GLIBC_FORCE_UNWIND=y
 # CT_GLIBC_KERNEL_VERSION_NONE is not set
 CT_GLIBC_KERNEL_VERSION_AS_HEADERS=y
 # CT_GLIBC_KERNEL_VERSION_CHOSEN is not set
-CT_GLIBC_MIN_KERNEL="4.15.18"
+CT_GLIBC_MIN_KERNEL="5.10.185"
 # CT_GLIBC_ENABLE_COMMON_FLAG is not set
 CT_ALL_LIBC_CHOICES="AVR_LIBC GLIBC MINGW_W64 MOXIEBOX MUSL NEWLIB NONE PICOLIBC UCLIBC_NG"
 CT_LIBC_SUPPORT_THREADS_ANY=y
