Enable build-id

--- a/arm-unknown-linux-gnueabi/.config
+++ b/arm-unknown-linux-gnueabi/.config
@@ -639,7 +639,7 @@ CT_CC_GCC_TM_CLONE_REGISTRY=m
 # CT_CC_GCC_DISABLE_PCH is not set
 # CT_CC_GCC_SJLJ_EXCEPTIONS is not set
 CT_CC_GCC_LDBL_128=m
-# CT_CC_GCC_BUILD_ID is not set
+CT_CC_GCC_BUILD_ID=y
 CT_CC_GCC_LNK_HASH_STYLE_DEFAULT=y
 # CT_CC_GCC_LNK_HASH_STYLE_SYSV is not set
 # CT_CC_GCC_LNK_HASH_STYLE_GNU is not set
