--- a/aarch64-unknown-linux-musl/.config
+++ b/aarch64-unknown-linux-musl/.config
@@ -607,7 +607,7 @@ CT_CC_GCC_TM_CLONE_REGISTRY=m
 # CT_CC_GCC_DISABLE_PCH is not set
 CT_CC_GCC_SJLJ_EXCEPTIONS=m
 CT_CC_GCC_LDBL_128=m
-# CT_CC_GCC_BUILD_ID is not set
+CT_CC_GCC_BUILD_ID=y
 # CT_CC_GCC_LNK_HASH_STYLE_DEFAULT is not set
 # CT_CC_GCC_LNK_HASH_STYLE_SYSV is not set
 # CT_CC_GCC_LNK_HASH_STYLE_GNU is not set
