--- a/aarch64-unknown-linux-musl/.config
+++ b/aarch64-unknown-linux-musl/.config
@@ -1,12 +1,11 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# crosstool-NG 1.26.0 Configuration
+# crosstool-NG 1.26.0.115_efcfd1a Configuration
 #
 CT_CONFIGURE_has_cxx11=y
 CT_CONFIGURE_has_lzip=y
 CT_CONFIGURE_has_curl=y
 CT_CONFIGURE_has_ninja=y
-CT_CONFIGURE_has_rsync=y
 CT_CONFIGURE_has_make_3_81_or_newer=y
 CT_CONFIGURE_has_make_4_0_or_newer=y
 CT_CONFIGURE_has_make_4_4_or_newer=y
@@ -27,7 +26,7 @@ CT_CONFIGURE_has_sha1sum=y
 CT_CONFIGURE_has_sha256sum=y
 CT_CONFIGURE_has_sha512sum=y
 CT_CONFIGURE_has_install_with_strip_program=y
-CT_VERSION="1.26.0"
+CT_VERSION="1.26.0.115_efcfd1a"
 CT_VCHECK=""
 CT_CONFIG_VERSION_ENV="4"
 CT_CONFIG_VERSION_CURRENT="4"
@@ -147,6 +146,7 @@ CT_ARCH_ARM=y
 # CT_ARCH_MOXIE is not set
 # CT_ARCH_MSP430 is not set
 # CT_ARCH_NIOS2 is not set
+# CT_ARCH_PARISC is not set
 # CT_ARCH_POWERPC is not set
 # CT_ARCH_PRU is not set
 # CT_ARCH_RISCV is not set
@@ -165,7 +165,7 @@ CT_ARCH_ARM_SHOW=y
 # Options for arm
 #
 CT_ARCH_ARM_PKG_KSYM=""
-CT_ALL_ARCH_CHOICES="ALPHA ARC ARM AVR BPF C6X LOONGARCH M68K MICROBLAZE MIPS MOXIE MSP430 NIOS2 POWERPC PRU RISCV S390 SH SPARC X86 XTENSA"
+CT_ALL_ARCH_CHOICES="ALPHA ARC ARM AVR BPF C6X LOONGARCH M68K MICROBLAZE MIPS MOXIE MSP430 NIOS2 PARISC POWERPC PRU RISCV S390 SH SPARC X86 XTENSA"
 CT_ARCH_SUFFIX=""
 # CT_OMIT_TARGET_VENDOR is not set
 
@@ -261,9 +261,6 @@ CT_KERNEL_LINUX_SHOW=y
 #
 CT_KERNEL_LINUX_PKG_KSYM="LINUX"
 CT_LINUX_DIR_NAME="linux"
-CT_LINUX_USE_WWW_KERNEL_ORG=y
-# CT_LINUX_USE_ORACLE is not set
-CT_LINUX_USE="LINUX"
 CT_LINUX_PKG_NAME="linux"
 CT_LINUX_SRC_RELEASE=y
 # CT_LINUX_SRC_DEVEL is not set
@@ -275,6 +272,12 @@ CT_LINUX_PATCH_GLOBAL=y
 # CT_LINUX_PATCH_LOCAL_BUNDLED is not set
 # CT_LINUX_PATCH_NONE is not set
 CT_LINUX_PATCH_ORDER="global"
+# CT_LINUX_V_6_10 is not set
+# CT_LINUX_V_6_9 is not set
+# CT_LINUX_V_6_8 is not set
+# CT_LINUX_V_6_7 is not set
+# CT_LINUX_V_6_6 is not set
+# CT_LINUX_V_6_5 is not set
 # CT_LINUX_V_6_4 is not set
 # CT_LINUX_V_6_3 is not set
 # CT_LINUX_V_6_2 is not set
@@ -318,7 +321,7 @@ CT_LINUX_V_5_10=y
 # CT_LINUX_V_3_13 is not set
 # CT_LINUX_V_3_12 is not set
 # CT_LINUX_V_3_10 is not set
-CT_LINUX_VERSION="5.10.185"
+CT_LINUX_VERSION="5.10.222"
 CT_LINUX_MIRRORS="$(CT_Mirrors kernel.org linux ${CT_LINUX_VERSION})"
 CT_LINUX_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_LINUX_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
@@ -339,6 +342,7 @@ CT_LINUX_3_7_or_later=y
 CT_LINUX_REQUIRE_3_7_or_later=y
 CT_LINUX_later_than_3_2=y
 CT_LINUX_3_2_or_later=y
+CT_KERNEL_has_rsync=y
 CT_KERNEL_DEP_RSYNC=y
 CT_KERNEL_LINUX_VERBOSITY_0=y
 # CT_KERNEL_LINUX_VERBOSITY_1 is not set
@@ -381,6 +385,9 @@ CT_BINUTILS_PATCH_GLOBAL=y
 # CT_BINUTILS_PATCH_LOCAL_BUNDLED is not set
 # CT_BINUTILS_PATCH_NONE is not set
 CT_BINUTILS_PATCH_ORDER="global"
+# CT_BINUTILS_V_2_43 is not set
+# CT_BINUTILS_V_2_42 is not set
+# CT_BINUTILS_V_2_41 is not set
 CT_BINUTILS_V_2_40=y
 # CT_BINUTILS_V_2_39 is not set
 # CT_BINUTILS_V_2_38 is not set
@@ -461,6 +468,7 @@ CT_MUSL_PATCH_GLOBAL=y
 # CT_MUSL_PATCH_LOCAL_BUNDLED is not set
 # CT_MUSL_PATCH_NONE is not set
 CT_MUSL_PATCH_ORDER="global"
+# CT_MUSL_V_1_2_5 is not set
 CT_MUSL_V_1_2_4=y
 # CT_MUSL_V_1_2_3 is not set
 # CT_MUSL_V_1_2_2 is not set
@@ -487,6 +495,7 @@ CT_LIBC_MUSL_OPTIMIZE_AUTO=y
 # CT_LIBC_MUSL_OPTIMIZE_SPEED is not set
 # CT_LIBC_MUSL_OPTIMIZE_SIZE is not set
 CT_LIBC_MUSL_OPTIMIZE="auto"
+CT_LIBC_MUSL_EXTRA_CFLAGS=""
 CT_ALL_LIBC_CHOICES="AVR_LIBC GLIBC MINGW_W64 MOXIEBOX MUSL NEWLIB NONE PICOLIBC UCLIBC_NG"
 CT_LIBC_SUPPORT_THREADS_ANY=y
 CT_LIBC_SUPPORT_THREADS_NATIVE=y
@@ -536,6 +545,7 @@ CT_GCC_PATCH_GLOBAL=y
 # CT_GCC_PATCH_LOCAL_BUNDLED is not set
 # CT_GCC_PATCH_NONE is not set
 CT_GCC_PATCH_ORDER="global"
+# CT_GCC_V_14 is not set
 CT_GCC_V_13=y
 # CT_GCC_V_12 is not set
 # CT_GCC_V_11 is not set
@@ -546,12 +556,14 @@ CT_GCC_V_13=y
 # CT_GCC_V_6 is not set
 # CT_GCC_V_5 is not set
 # CT_GCC_V_4_9 is not set
-CT_GCC_VERSION="13.2.0"
+CT_GCC_VERSION="13.3.0"
 CT_GCC_MIRRORS="$(CT_Mirrors GNU gcc/gcc-${CT_GCC_VERSION}) $(CT_Mirrors sourceware gcc/releases/gcc-${CT_GCC_VERSION})"
 CT_GCC_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GCC_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GCC_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_GCC_SIGNATURE_FORMAT=""
+CT_GCC_14_or_older=y
+CT_GCC_older_than_14=y
 CT_GCC_later_than_13=y
 CT_GCC_13_or_later=y
 CT_GCC_later_than_12=y
@@ -635,6 +647,21 @@ CT_CC_LANG_OTHERS=""
 # end of C compiler
 
 #
+# Linkers
+#
+
+#
+# BFD enabled in binutils
+#
+
+#
+# GOLD enabled in binutils
+#
+# CT_LINKER_MOLD is not set
+CT_ALL_LINKER_CHOICES="MOLD"
+# end of Linkers
+
+#
 # Debug facilities
 #
 # CT_DEBUG_DUMA is not set
@@ -652,6 +679,8 @@ CT_GDB_PATCH_GLOBAL=y
 # CT_GDB_PATCH_LOCAL_BUNDLED is not set
 # CT_GDB_PATCH_NONE is not set
 CT_GDB_PATCH_ORDER="global"
+# CT_GDB_V_15 is not set
+# CT_GDB_V_14 is not set
 CT_GDB_V_13=y
 # CT_GDB_V_12 is not set
 # CT_GDB_V_11 is not set
@@ -664,6 +693,10 @@ CT_GDB_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GDB_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GDB_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_GDB_SIGNATURE_FORMAT=""
+CT_GDB_15_or_older=y
+CT_GDB_older_than_15=y
+CT_GDB_14_or_older=y
+CT_GDB_older_than_14=y
 CT_GDB_later_than_13=y
 CT_GDB_13_or_later=y
 CT_GDB_later_than_12=y
@@ -682,6 +715,7 @@ CT_GDB_CROSS_EXTRA_CONFIG_ARRAY=""
 # CT_GDB_NATIVE is not set
 # CT_GDB_GDBSERVER is not set
 CT_GDB_GDBSERVER_TOPLEVEL=y
+CT_GDB_CC_LD_LIBTOOL=y
 # CT_DEBUG_LTRACE is not set
 # CT_DEBUG_STRACE is not set
 CT_ALL_DEBUG_CHOICES="DUMA GDB LTRACE STRACE"
@@ -707,7 +741,6 @@ CT_EXPAT_PATCH_GLOBAL=y
 # CT_EXPAT_PATCH_NONE is not set
 CT_EXPAT_PATCH_ORDER="global"
 CT_EXPAT_V_2_5=y
-# CT_EXPAT_V_2_4 is not set
 CT_EXPAT_VERSION="2.5.0"
 CT_EXPAT_MIRRORS="http://downloads.sourceforge.net/project/expat/expat/${CT_EXPAT_VERSION} https://github.com/libexpat/libexpat/releases/download/R_${CT_EXPAT_VERSION//./_}"
 CT_EXPAT_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
@@ -728,17 +761,18 @@ CT_GETTEXT_PATCH_GLOBAL=y
 # CT_GETTEXT_PATCH_LOCAL_BUNDLED is not set
 # CT_GETTEXT_PATCH_NONE is not set
 CT_GETTEXT_PATCH_ORDER="global"
-CT_GETTEXT_V_0_21=y
+CT_GETTEXT_V_0_22_5=y
+# CT_GETTEXT_V_0_21 is not set
 # CT_GETTEXT_V_0_20_1 is not set
 # CT_GETTEXT_V_0_19_8_1 is not set
-CT_GETTEXT_VERSION="0.21"
+CT_GETTEXT_VERSION="0.22.5"
 CT_GETTEXT_MIRRORS="$(CT_Mirrors GNU gettext)"
 CT_GETTEXT_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GETTEXT_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GETTEXT_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_GETTEXT_SIGNATURE_FORMAT="packed/.sig"
+CT_GETTEXT_later_than_0_21=y
 CT_GETTEXT_0_21_or_later=y
-CT_GETTEXT_0_21_or_older=y
 CT_GETTEXT_INCOMPATIBLE_WITH_UCLIBC_NG=y
 
 #
@@ -800,7 +834,6 @@ CT_ISL_V_0_26=y
 # CT_ISL_V_0_17 is not set
 # CT_ISL_V_0_16 is not set
 # CT_ISL_V_0_15 is not set
-# CT_ISL_V_0_11 is not set
 CT_ISL_VERSION="0.26"
 CT_ISL_MIRRORS="https://libisl.sourceforge.io"
 CT_ISL_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
@@ -848,9 +881,8 @@ CT_MPC_PATCH_GLOBAL=y
 # CT_MPC_PATCH_LOCAL_BUNDLED is not set
 # CT_MPC_PATCH_NONE is not set
 CT_MPC_PATCH_ORDER="global"
+# CT_MPC_V_1_3 is not set
 CT_MPC_V_1_2=y
-# CT_MPC_V_1_1 is not set
-# CT_MPC_V_1_0 is not set
 CT_MPC_VERSION="1.2.1"
 CT_MPC_MIRRORS="https://www.multiprecision.org/downloads $(CT_Mirrors GNU mpc)"
 CT_MPC_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
@@ -874,9 +906,6 @@ CT_MPFR_PATCH_GLOBAL=y
 # CT_MPFR_PATCH_NONE is not set
 CT_MPFR_PATCH_ORDER="global"
 CT_MPFR_V_4_2=y
-# CT_MPFR_V_4_1 is not set
-# CT_MPFR_V_4_0 is not set
-# CT_MPFR_V_3_1 is not set
 CT_MPFR_VERSION="4.2.1"
 CT_MPFR_MIRRORS="https://www.mpfr.org/mpfr-${CT_MPFR_VERSION} $(CT_Mirrors GNU mpfr)"
 CT_MPFR_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
@@ -930,8 +959,8 @@ CT_ZLIB_PATCH_GLOBAL=y
 # CT_ZLIB_PATCH_LOCAL_BUNDLED is not set
 # CT_ZLIB_PATCH_NONE is not set
 CT_ZLIB_PATCH_ORDER="global"
+# CT_ZLIB_V_1_3 is not set
 CT_ZLIB_V_1_2_13=y
-# CT_ZLIB_V_1_2_12 is not set
 CT_ZLIB_VERSION="1.2.13"
 CT_ZLIB_MIRRORS="https://github.com/madler/zlib/releases/download/v${CT_ZLIB_VERSION} https://www.zlib.net/"
 CT_ZLIB_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
@@ -952,6 +981,7 @@ CT_ZSTD_PATCH_GLOBAL=y
 # CT_ZSTD_PATCH_LOCAL_BUNDLED is not set
 # CT_ZSTD_PATCH_NONE is not set
 CT_ZSTD_PATCH_ORDER="global"
+# CT_ZSTD_V_1_5_6 is not set
 CT_ZSTD_V_1_5_5=y
 # CT_ZSTD_V_1_5_2 is not set
 CT_ZSTD_VERSION="1.5.5"
