--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -39,10 +39,9 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install crosstool-ng
         run: |
-          brew install coreutils
-          brew install --HEAD crosstool-ng
+          brew install coreutils crosstool-ng
           # fix python env in the runner
-          brew unlink python@3.11 && brew link --overwrite python@3.11
+          brew unlink python@3.12 && brew link --overwrite python@3.12
           python3 --version
       - name: Mount volumes
         run: |
