--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -28,18 +28,18 @@ jobs:
           - name: macos-14
             arch: aarch64
         target:
-          - x86_64-unknown-linux-gnu
-          - x86_64-unknown-linux-musl
-          - i686-unknown-linux-gnu
-          - i686-unknown-linux-musl
-          - aarch64-unknown-linux-gnu
-          - aarch64-unknown-linux-musl
+          # - x86_64-unknown-linux-gnu
+          # - x86_64-unknown-linux-musl
+          # - i686-unknown-linux-gnu
+          # - i686-unknown-linux-musl
+          # - aarch64-unknown-linux-gnu
+          # - aarch64-unknown-linux-musl
           - armv7-unknown-linux-gnueabihf
-          - armv7-unknown-linux-musleabihf
+          # - armv7-unknown-linux-musleabihf
           - arm-unknown-linux-gnueabi
           - arm-unknown-linux-gnueabihf
-          - arm-unknown-linux-musleabihf
-          - mipsel-unknown-linux-gnu
+          # - arm-unknown-linux-musleabihf
+          # - mipsel-unknown-linux-gnu
     steps:
       - uses: actions/checkout@v4
       - name: Install crosstool-ng
