fix: see if disabling LTO passes CI

--- a/arm-unknown-linux-gnueabi/.config
+++ b/arm-unknown-linux-gnueabi/.config
@@ -649,8 +649,7 @@ CT_CC_GCC_CONFIG_TLS=m
 # Optimisation features
 #
 CT_CC_GCC_USE_GRAPHITE=y
-CT_CC_GCC_USE_LTO=y
-CT_CC_GCC_LTO_ZSTD=m
+# CT_CC_GCC_USE_LTO is not set
 
 #
 # Settings for libraries running on target
