--- a/armv7-unknown-linux-gnueabihf/.config
+++ b/armv7-unknown-linux-gnueabihf/.config
@@ -650,7 +650,8 @@ CT_CC_GCC_CONFIG_TLS=m
 # Optimisation features
 #
 CT_CC_GCC_USE_GRAPHITE=y
-# CT_CC_GCC_USE_LTO is not set
+CT_CC_GCC_USE_LTO=y
+CT_CC_GCC_LTO_ZSTD=m
 
 #
 # Settings for libraries running on target
