fix: see if stable crosstool-ng works

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -44,8 +44,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install crosstool-ng
         run: |
-          brew install coreutils
-          brew install --HEAD crosstool-ng
+          brew install coreutils crosstool-ng
           # fix python env in the runner
           brew unlink python@3.12 && brew link --overwrite python@3.12
           python3 --version
