--- a/armv7-unknown-linux-gnueabihf/.config
+++ b/armv7-unknown-linux-gnueabihf/.config
@@ -722,27 +722,27 @@ CT_GDB_PKG_NAME="gdb"
 CT_GDB_SRC_RELEASE=y
 # CT_GDB_SRC_DEVEL is not set
 CT_GDB_PATCH_ORDER="global"
-# CT_GDB_V_16 is not set
+CT_GDB_V_16=y
 # CT_GDB_V_15 is not set
 # CT_GDB_V_14 is not set
-CT_GDB_V_13=y
+# CT_GDB_V_13 is not set
 # CT_GDB_V_12 is not set
 # CT_GDB_V_11 is not set
 # CT_GDB_V_10 is not set
 # CT_GDB_V_9 is not set
 # CT_GDB_V_8_3 is not set
-CT_GDB_VERSION="13.2"
+CT_GDB_VERSION="16.3"
 CT_GDB_MIRRORS="$(CT_Mirrors GNU gdb) $(CT_Mirrors sourceware gdb/releases)"
 CT_GDB_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GDB_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GDB_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_GDB_SIGNATURE_FORMAT=""
-CT_GDB_16_or_older=y
-CT_GDB_older_than_16=y
-CT_GDB_15_or_older=y
-CT_GDB_older_than_15=y
-CT_GDB_14_or_older=y
-CT_GDB_older_than_14=y
+CT_GDB_later_than_16=y
+CT_GDB_16_or_later=y
+CT_GDB_later_than_15=y
+CT_GDB_15_or_later=y
+CT_GDB_later_than_14=y
+CT_GDB_14_or_later=y
 CT_GDB_later_than_13=y
 CT_GDB_13_or_later=y
 CT_GDB_later_than_12=y
