feat: upgrade to MacOS 15 intel

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -23,7 +23,7 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          - name: macos-12
+          - name: macos-15-intel
             arch: x86_64
           - name: macos-14
             arch: aarch64
