--- a/x86_64-unknown-linux-musl/.config
+++ b/x86_64-unknown-linux-musl/.config
@@ -430,7 +430,7 @@ CT_BINUTILS_LINKER_DEFAULT="bfd"
 CT_BINUTILS_PLUGINS=y
 CT_BINUTILS_RELRO=m
 CT_BINUTILS_DETERMINISTIC_ARCHIVES=y
-CT_BINUTILS_EXTRA_CONFIG_ARRAY=""
+CT_BINUTILS_EXTRA_CONFIG_ARRAY="--with-system-zlib"
 # CT_BINUTILS_FOR_TARGET is not set
 # CT_BINUTILS_GPROFNG is not set
 CT_ALL_BINUTILS_CHOICES="BINUTILS"
