more system zlib

--- a/arm-unknown-linux-musleabihf/.config
+++ b/arm-unknown-linux-musleabihf/.config
@@ -610,7 +610,7 @@ CT_CC_GCC_HAS_LIBMPX=y
 CT_CC_GCC_ENABLE_CXX_FLAGS=""
 CT_CC_GCC_CORE_EXTRA_CONFIG_ARRAY=""
 CT_CC_GCC_EXTRA_CONFIG_ARRAY=""
-# CT_CC_GCC_SYSTEM_ZLIB is not set
+CT_CC_GCC_SYSTEM_ZLIB=y
 CT_CC_GCC_CONFIG_TLS=m
 
 #
@@ -733,7 +733,7 @@ CT_GDB_CROSS=y
 # CT_GDB_CROSS_SIM is not set
 CT_GDB_CROSS_PYTHON=y
 CT_GDB_CROSS_PYTHON_BINARY="python3"
-CT_GDB_CROSS_EXTRA_CONFIG_ARRAY=""
+CT_GDB_CROSS_EXTRA_CONFIG_ARRAY="--with-system-zlib"
 # CT_GDB_NATIVE is not set
 # CT_GDB_GDBSERVER is not set
 CT_GDB_GDBSERVER_TOPLEVEL=y
